app/nodejs/2_kubia-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.k8s.abcxlab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia
          servicePort: 80
