app/nodejs/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.k8s.abcxlab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia
          servicePort: 80
